--- a/style.css
+++ b/style.css
@@ -6,25 +6,27 @@ body {
     overflow: hidden;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 75%;
     transform: translate(-50%, -50%);
+    background-color: #081f29;
 
 }
 
 .card {
-    height: 500px;
-    width: 400px;
-    border-radius: 50%;
+    height: 400px;
+    width: 300px;
+        background-color: transparent;
+    border-radius: 40%;
     background: url("Capture.JPG") no-repeat;
     background-position: center;
-    background-size: 400px;
+    background-size: 100%;
     border: none;
     transition: all 0.8s;
     position: relative;
 }
 
 .card:hover {
-    background-size: 800px;
+    background-size: 150%;
     background-position: left center;
     border-radius: 20px;
 }
@@ -62,13 +64,13 @@ body {
     position: absolute;
     top: 25px;
     left: 35px;
-    color: blue;
-    font-size: 40px;
+    color: orange;
+    font-size: 30px;
     font-weight: bolder;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     opacity: 0;
     transition: opacity 0.8s;
-    text-shadow: 0 3px 3px blue;
+    /* text-shadow: 0 3px 3px rgb(255, 255, 255); */
 }
 
 .card:hover span {
@@ -84,13 +86,13 @@ body {
 }
 
 .socials a {
-    color: blue;
+    color: orange;
     text-decoration: none;
-    font-size: 32px;
+    font-size: 20px;
     margin-bottom: 20px;
     opacity: 0;
     transform: translateX(-20px);
-    transition: opacity 0.4s ease, transform 0.4s ease;
+    transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
 .socials a:nth-child(1){ transition-delay: 0.1s;}
