--- a/style.css
+++ b/style.css
@@ -192,17 +192,25 @@ body {
     transform: scale(0);
     transition: opacity 0.3s ease, transform 0.3s ease;
 }
-.social a:nth-child(1){
+
+.social a:nth-child(1) {
     transition-delay: 0.1s;
+    color: #1877F2;
 }
-.social a:nth-child(2){
+
+.social a:nth-child(2) {
     transition-delay: 0.2s;
+    color: #1DA1F2;
 }
-.social a:nth-child(3){
+
+.social a:nth-child(3) {
     transition-delay: 0.3s;
+    color: rgb(233, 129, 146);
 }
-.social a:nth-child(4){
+
+.social a:nth-child(4) {
     transition-delay: 0.4s;
+    color: #081f29;
 }
 
 .social.show .social-links {
@@ -259,48 +267,62 @@ body {
         opacity: 0;
         transform: translateX(-20px);
     }
-    .floating-btn{
+
+    .floating-btn {
         right: 1px;
     }
+
     .main-btn {
         width: 55px;
         height: 55px;
         font-size: 20px;
     }
+
+    .social {
+        flex-direction: column-reverse;
+    }
+
     .social-link {
         width: 45px;
         height: 45px;
         font-size: 18px;
     }
+
     .tooltip {
-        font-size: 12px;
-        right: 65px;
+        display: none !important;
+
     }
 
 
 }
 
 @media (max-width: 480px) {
-    .card {
+
+    .floating-btn {
+        display: none;
+    }
+
+    /* .card {
         height: 315px;
         width: 315px;
-    }
-    .floating-btn {
-        bottom: 10px;
-        right: 20px;
-    }
-    .main-btn {
+    } */
+
+    /* bottom: 10px;
+        right: 20px; */
+
+    /* .main-btn {
         width: 50px;
         height: 50px;
         font-size: 18px;
     }
+
     .social-link {
         width: 40px;
         height: 40px;
         font-size: 16px;
     }
+
     .tooltip {
-        font-size: 11px;
-        right: 60px;
-    }
+        display: none !important;
+    } */
 }
